--- a/Index.html
+++ b/Index.html
@@ -120,6 +120,7 @@
     <label for="item_list">Select an item:</label>
     <select id="item_list" onchange="showItemDetails()">
         <option value="none">Select an item</option>
+        <!-- Aquí se añadirán dinámicamente las opciones -->
     </select>
 
     <img id="item_image" class="item-image" src="" alt="Imagen del ítem" style="display:none;" />
