--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
             background-color: #E53E00; /* Hover más oscuro */
         }
 
-        #command_list, #kit_list {
+        #command_list, #kit_list, #inventory {
             margin-top: 20px;
             padding: 10px;
             background-color: #292929; /* Cuadro oscuro */
@@ -71,6 +71,40 @@
             gap: 5px;
         }
 
+        .inventory {
+            display: flex;
+            flex-direction: column;
+            margin-top: 10px;
+        }
+
+        .inventory-section {
+            margin: 10px 0;
+        }
+
+        .inventory-slot {
+            width: 50px;
+            height: 50px;
+            border: 1px solid #FF4500;
+            margin: 2px;
+            position: relative;
+            display: inline-block;
+        }
+
+        .inventory-slot img {
+            width: 100%;
+            height: 100%;
+        }
+
+        .quantity {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            color: #FF4500;
+            font-size: 0.6em;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 2px;
+        }
+
         footer {
             text-align: center;
             color: #EAEAEA;
@@ -90,48 +124,6 @@
         .item-image {
             max-width: 100px;
             margin: 10px 0;
-        }
-
-        /* Estilos del inventario */
-        .inventory {
-            display: none; /* Ocultado por defecto */
-            margin-top: 20px;
-            padding: 10px;
-            border: 2px solid #FF4500;
-            background-color: #292929;
-            border-radius: 10px;
-        }
-
-        .inventory-section {
-            margin-bottom: 15px;
-        }
-
-        .inventory-slot {
-            display: inline-block;
-            width: 50px;
-            height: 50px;
-            border: 1px solid #FF4500;
-            border-radius: 5px;
-            position: relative;
-            margin-right: 5px;
-            background-color: #444; /* Color del fondo del slot */
-        }
-
-        .inventory-slot img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ajustar la imagen al contenedor */
-        }
-
-        .quantity {
-            position: absolute;
-            bottom: 5px;
-            right: 5px;
-            font-size: 10px; /* Tamaño de texto más pequeño para la cantidad */
-            color: #fff;
-            background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
-            padding: 2px;
-            border-radius: 3px;
         }
     </style>
 </head>
@@ -173,7 +165,7 @@
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
-        <option value="elitekit1">elitekit1</option>
+        <option value="elitekit1">elitekit</option>
         <option value="elitekit2">elitekit2</option>
         <option value="elitekit3">elitekit3</option>
         <option value="elitekit4">elitekit4</option>
@@ -211,10 +203,8 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
-
-    <!-- Sección de Inventario -->
-    <div id="inventory" class="inventory">
-        <h2>Simulated Inventory</h2>
+    <div id="inventory" style="display: none;">
+        <h2>Inventory</h2>
         <div class="inventory-section">
             <h3>Wear</h3>
             <div class="inventory-slot"></div>
@@ -253,6 +243,7 @@
             <div class="inventory-slot"></div>
             <div class="inventory-slot"></div>
         </div>
+        <button onclick="hideInventory()">Back</button>
     </div>
 
     <script src="Items.js"></script>
@@ -330,7 +321,6 @@
                 kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <button onclick="showKitDetails('${kit.name}')">Show kit</button>
-                    <button onclick="showInventory('${kit.name}')">+ Info</button>
                 `;
                 kitListContainer.appendChild(kitItem);
             });
@@ -350,6 +340,7 @@
                     <div>${kit.commands.join('<br>')}</div>
                     <button onclick="copyKits('${kit.name}')">Copy Command</button>
                     <button onclick="toggleKitList()">Hide list</button>
+                    <button onclick="showInventory('${kit.name}')">+ Info</button> <!-- Botón + Info -->
                 `;
                 commandList.appendChild(kitDetails);
             }
@@ -357,43 +348,91 @@
 
         // Función para mostrar el inventario
         function showInventory(kitName) {
-            const kit = predefinedKits.find(k => k.name === kitName);
+            const kit = commands.find(k => k.name === kitName) || predefinedKits.find(k => k.name === kitName);
             const inventory = document.getElementById('inventory');
-            inventory.innerHTML = ''; // Limpiar contenido anterior
-            inventory.style.display = 'block'; // Mostrar el inventario
+            const inventorySlots = document.querySelectorAll('.inventory-slot');
+            inventory.style.display = 'block'; // Mostrar inventario
+            const itemsInInventory = {};
+
+            // Inicializar los slots de inventario
+            inventorySlots.forEach(slot => {
+                slot.innerHTML = ''; // Limpiar contenido anterior
+            });
 
             if (kit) {
                 kit.commands.forEach(command => {
-                    const parts = command.split('"');
-                    const itemID = parts[1].trim(); // Obtener el ID del ítem
-                    const quantity = parts[2].trim(); // Obtener la cantidad
+                    const parts = command.split('"'); // Extraer partes del comando
+                    const itemId = parts[1]; // ID del ítem
+                    const location = parts[3]; // Localización (Wear, Main, Belt)
 
-                    // Crear un slot en el inventario
-                    const inventorySlot = document.createElement('div');
-                    inventorySlot.className = 'inventory-slot';
-
-                    // Crear la imagen del ítem
-                    const img = document.createElement('img');
-                    img.src = `images/${itemID}.png`;
-                    img.alt = itemID;
-                    inventorySlot.appendChild(img);
-
-                    // Añadir cantidad
-                    const quantityLabel = document.createElement('div');
-                    quantityLabel.className = 'quantity';
-                    quantityLabel.innerText = `x${quantity}`;
-                    inventorySlot.appendChild(quantityLabel);
-
-                    // Añadir el slot al inventario correspondiente
-                    if (parts[3].includes('Wear')) {
-                        document.querySelector('.inventory-section:nth-child(1)').appendChild(inventorySlot); // Wear
-                    } else if (parts[3].includes('Main')) {
-                        document.querySelector('.inventory-section:nth-child(2)').appendChild(inventorySlot); // Main
-                    } else if (parts[3].includes('Belt')) {
-                        document.querySelector('.inventory-section:nth-child(3)').appendChild(inventorySlot); // Belt
+                    if (!itemsInInventory[itemId]) {
+                        itemsInInventory[itemId] = { quantity: 0, location: location };
                     }
+
+                    itemsInInventory[itemId].quantity += parseInt(parts[2]); // Sumar cantidad
                 });
+
+                // Mostrar ítems en sus ubicaciones correctas
+                for (const [id, { quantity, location }] of Object.entries(itemsInInventory)) {
+                    const imageUrl = `images/${id}.png`;
+                    const slots = {
+                        "Wear": document.querySelectorAll('.inventory-slot')[0], // 7 slots
+                        "Main": document.querySelectorAll('.inventory-slot')[1], // 24 slots
+                        "Belt": document.querySelectorAll('.inventory-slot')[2] // 6 slots
+                    };
+
+                    // Lógica para llenar los slots en función de la ubicación
+                    if (location === "Wear") {
+                        for (let i = 0; i < 7; i++) {
+                            if (slots["Wear"].children.length < 7) {
+                                const img = document.createElement('img');
+                                img.src = imageUrl;
+                                img.alt = id;
+                                const quantityLabel = document.createElement('span');
+                                quantityLabel.className = 'quantity';
+                                quantityLabel.textContent = `x${quantity}`;
+                                slots["Wear"].appendChild(img);
+                                img.appendChild(quantityLabel);
+                                break;
+                            }
+                        }
+                    } else if (location === "Main") {
+                        for (let i = 0; i < 24; i++) {
+                            if (slots["Main"].children.length < 24) {
+                                const img = document.createElement('img');
+                                img.src = imageUrl;
+                                img.alt = id;
+                                const quantityLabel = document.createElement('span');
+                                quantityLabel.className = 'quantity';
+                                quantityLabel.textContent = `x${quantity}`;
+                                slots["Main"].appendChild(img);
+                                img.appendChild(quantityLabel);
+                                break;
+                            }
+                        }
+                    } else if (location === "Belt") {
+                        for (let i = 0; i < 6; i++) {
+                            if (slots["Belt"].children.length < 6) {
+                                const img = document.createElement('img');
+                                img.src = imageUrl;
+                                img.alt = id;
+                                const quantityLabel = document.createElement('span');
+                                quantityLabel.className = 'quantity';
+                                quantityLabel.textContent = `x${quantity}`;
+                                slots["Belt"].appendChild(img);
+                                img.appendChild(quantityLabel);
+                                break;
+                            }
+                        }
+                    }
+                }
             }
+        }
+
+        // Función para ocultar el inventario
+        function hideInventory() {
+            const inventory = document.getElementById('inventory');
+            inventory.style.display = 'none'; // Ocultar inventario
         }
 
         // Función para ocultar la lista
@@ -476,7 +515,6 @@
                         <button onclick="copyCommands('${kit.name}')">Copy</button>
                         <button onclick="editKit('${kit.name}')">Edit</button>
                         <button onclick="deleteKit('${kit.name}')">Delete</button>
-                        <button onclick="showInventory('${kit.name}')">+ Info</button>
                     </div>
                 `;
                 commandList.appendChild(kitItem);
